Fixed Z-Index of Overlay

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -833,7 +833,7 @@ header {
 
 .page-amplitude-wrapper+.section-overlay,
 #page-particle+.section-overlay {
-  z-index: 0;
+  z-index: -1;
 }
 
 .section-overlay.youtube {
@@ -861,8 +861,8 @@ header {
 
 .overlay-opacity {
   filter: alpha(opacity=50);
-  /* opacity: 0.3; */
-  opacity: 0.1;
+  opacity: 0.3;
+  /* opacity: 0.1; */
 }
 
 .overlay-opacity-2 {
